--- a/src/app/views/unlock.html
+++ b/src/app/views/unlock.html
@@ -1,5 +1,6 @@
-<div class="text-center">
-    
+<div class="text-center" style="padding-top:30px;">
+    <div class="small-container">
+
     <div class="row">
       <div class="col-xs-10 col-xs-offset-1">
         <img class="logoBig" src="skin/images/logo.png" />
@@ -21,5 +22,6 @@
           <br />
           <a ng-click="clear()" class="btn-link">Clear TezBox</a>
         </div>
+    </div>
     </div>
 </div>
