--- a/src/app/views/encrypt.html
+++ b/src/app/views/encrypt.html
@@ -4,11 +4,14 @@
             <span class="logo"><img class="logoSmall" src="skin/images/logo.png" /> TEZBOX</span>
         </div>
     </div>
+    
+    <div class="med-container">
+      <h2 class="med-title">Secure your TezBox</h2>
     <div class="row text-center">
       <div class="col-xs-12">
             <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please enter a password to encrypt your private key. This password is only used to unlock your wallet (not required to restore it).</strong></p>
         </div>
-        <div class="col-xs-10 col-xs-offset-1">
+        <div class="col-xs-6 col-xs-offset-3">
             <div class="form-group">
                 <input autocomplete="off" type="password" class="text-center form-control" ng-model="password" placeholder="Enter Password">
             </div>
@@ -16,10 +19,11 @@
                 <input autocomplete="off" type="password" class="text-center form-control" ng-model="password2" placeholder="Repeat Password">
             </div>
         </div>
-        <div class="col-xs-10 col-xs-offset-1">
+        <div class="col-md-4 col-md-offset-4">
             <a ng-click="encrypt()" class="btn btn-success btn-block">Encrypt Wallet</a>
             <br />
             <a ng-click="cancel()" class="btn-link">Cancel</a>
         </div>
+    </div>
     </div>
 </div>
