--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -1,95 +1,244 @@
 <div>
-    <div class="row mainHeaderBox">
-        <div class="col-xs-6">
+    <div class="mainHeaderBox">
+        <div class="col-md-4">
             <span class="logo"><img class="logoSmall" src="skin/images/logo.png" /> TEZBOX</span>
         </div>
-        <div class="col-xs-6 text-right">
-            <a ng-click="viewSettings()" class="btn btn-icon btn-default"><i class="fa fa-cog" aria-hidden="true"></i></a> 
-            <a ng-click="lock()" class="btn btn-icon btn-default"><i class="fa fa-lock" aria-hidden="true"></i></a>
+        <div class="col-md-4 text-center">
+          
         </div>
+        <div class="col-md-4 text-right">
+            <a ng-click="viewSettings()" class="btn btn-icon btn-default" style="margin-right:10px;"><i style="    font-size: 30px;" class="fa fa-cog" aria-hidden="true"></i></a>
+            <a ng-click="lock()" class="btn btn-icon btn-default"><i style="    font-size: 30px;" class="fa fa-lock" aria-hidden="true"></i></a>
+        </div>
+    </div>
+    
+    <div class="mainBody">
+      <div class="side" style="padding-bottom: 100px;">
+        <h3 style="">My Accounts</h3>
+        <div class="sideContainer">
+        <ul class="sidebar">
+          <li ng-repeat="a in accounts track by a.address"><a ng-click="loadAccount($index)"><blocky class="avatar" seed='{{a.address}}' size='8' scale='16'></blocky> {{a.title}}<span>{{a.address}}</span></a></li>
+          <li><a style="padding-top: 8px!important;" ng-click="add()">Add Account <i class="fa fa-plus" ></i></a></li>
+        </ul>
+        </div>
+        <div  style="position:absolute;bottom:30px;font-size:12px;">
+        <p>
+        {{block.net}}<br />
+        Level {{block.level}}<br />
+        <strong>{{block.proto}}</strong><br />
+        {{setting.rpc}}
+        <p class="copy text-center"><a href="https://tezbox.github.io/disclaimer.html" target="_blank">Disclaimer</a> - <a href="https://tezbox.github.io/terms.html" target="_blank">Terms</a> - <a href="https://tezbox.github.io/privacy.html" target="_blank">Privacy</a></p>
+        </p>
+        </div>
+      </div>
+      <div class="mainArea">
+      <div class="innerContainer">
+    
+    <div class="row">
+      <div class="col-md-12">
+      <p class="alert alert-warning"><i class="leftIcon fas fa-exclamation-circle"></i><strong>This wallet is connected to the betanet, where you are dealing with live transactions. You can read more about the <a href="https://tezosfoundation.ch/news/tezos-betanet-expectations/" target="_blank">Betanet expectations here</a>.</strong></p>
+    </div>
     </div>
     <div class="row addressDetails">
-        <div class="col-xs-12">
-            <h1 class="walletTitle" ng-show="!editMode">
-              <div class="dropdown left">
-								<button class="icon-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-									<i class="fa fa-angle-down" aria-hidden="true"></i>
-								</button>
-								<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-									<li ng-repeat="a in accounts track by a.address"><a ng-click="loadAccount($index)">{{a.title}}</a></li>
-									<li role="separator" class="divider"></li>
-									<li><a ng-click="add()">Add Account</a></li>
-								</ul>
-							</div>
-              {{accounts[account].title}}
-							<div class="dropdown right">
-								<button class="icon-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-									<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-								</button>
-								<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-									<li><a ng-click="editMode = true;">Edit Title</a></li>
-									<li><a ng-click="delegate()">Manage Delegate</a></li>
-									<li><a href="http://tzscan.io/{{accounts[account].address}}" target="_blank">View on TZScan</a></li>
-									<li ng-show="account > 0"><a ng-click="remove()">Remove Account</a></li>
-									<li ng-show="account === 0"><a ng-click="import()">Import KT1 Account</a></li>
-								</ul>
-							</div>
-						</h1>
-            <div ng-show="editMode" style="    margin-top: 14px;" class="input-group">
-              <input type="text" class="form-control" ng-model="accounts[account].title">
-              <span class="input-group-btn">
-                <a ng-click="save()" class="btn btn-success btn-inner">Save</a>
-              </span>
-            </div>
-        </div>
-    </div>
-    <div class="row addressDetails text-center" style="margin-top:10px;">
-        <div class="col-xs-3 blockatar">
+        <div class="col-md-3 blocky-container">
           <blocky class="avatar" seed='{{accounts[account].address}}' size='8' scale='16'></blocky>
           <div class="accountOffline" ng-hide="accountLive"><i class="leftIcon fas fa-exclamation-circle"></i></div>
         </div>
-        <div class="col-xs-9">
+        <div class="col-md-6">
+            <h1 class="walletTitle">
+              {{accounts[account].title}}
+						</h1>
             <h5 class="address">
-            <button ng-click="copy()" class="icon-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-									<i class="far fa-copy" aria-hidden="true"></i>
-								</button>
-                {{accounts[account].address}}
-                </h5>
-            <h5 class="balance">{{accountDetails.balance}} <button ng-click="refresh()" class="icon-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-									<i class="fas fa-sync" aria-hidden="true"></i>
-								</button>
-                </h5>
+              <button ng-click="copy()" class="icon-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <i class="far fa-copy" aria-hidden="true"></i>
+              </button>
+              {{accounts[account].address}}
+            </h5>
+            <strong><a target="_blank" href="https://tzscan.io/{{accounts[account].address}}">View on tzscan <i class="fas fa-external-link-alt"></i></a></strong>
+            <h5 class="balance">
+              {{accountDetails.balance}} 
+              <button ng-click="refresh()" class="icon-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                <i class="fas fa-sync" aria-hidden="true"></i>
+              </button>
+            </h5>
+        </div>
+        <div class="col-md-3">
+          <qrcode style="margin:25px;"  error-correction-level="H" size="180" data="{{accounts[account].address}}" color="#FFF" background="#000"></qrcode>
         </div>
     </div>
+    
+    
     <div class="row" ng-hide="accountLive">
-        <div class="col-md-10 col-md-offset-1">
-                  <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>This account has not be added to the blockchain yet - please wait for a baker to include this in a block before using this account.</strong></p>
+                  <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>This account has not been added to the blockchain yet - please wait for a baker to include this in a block before you can use this account.</strong></p>
     </div>
-    </div>
-    <div ng-show="accountLive">
-    <div class="row" style="margin-top:10px;">
-        <div class="col-xs-3 col-xs-offset-3" style="padding:2px;">
-          <a ng-click="send()" class="btn btn-success btn-small btn-block">Send</a>
+    <div class="row" ng-show="accountLive">
+        <div class="col-md-12">
+
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+          <li role="presentation" class="active"><a data-target="#transactions" aria-controls="transactions" role="tab" data-toggle="tab"><i class="fas fa-exchange-alt"></i> Transactions</a></li>
+          <li role="presentation"><a data-target="#send" aria-controls="send" role="tab" data-toggle="tab"><i class="fas fa-paper-plane"></i> Send</a></li>
+          <li role="presentation"><a data-target="#delegate" aria-controls="delegate" role="tab" data-toggle="tab"><i class="fa fa-users"></i> Delegate</a></li>
+          <li role="presentation"><a data-target="#settings" aria-controls="settings" role="tab" data-toggle="tab"><i class="fas fa-sliders-h"></i> Options</a></li>
+        </ul>
+
+        <!-- Tab panes -->
+        <div class="tab-content mainTabs">
+          <div role="tabpanel" class="tab-pane active text-center" id="transactions">
+            <strong ng-hide="transactions.length != 0">No transactions available</strong>
+            
+            <div class="transactions" ng-hide="transactions.length == 0">
+              <div class='tx' ng-repeat="tx in transactions track by $index">
+                    <blocky class="avatar" seed='{{tx.to}}' size='8' scale='16'></blocky>
+                    <h3 class="date">{{tx.date}} - {{tx.to}}</h3>
+                    <span class="opHash"><a target="_blank" href="{{'https://tzscan.io/' + tx.hash}}">{{tx.hash.slice(0,15)}}..<i class="fa fa-external-link-alt" aria-hidden="true"></i></a></span>
+                    <span class="amt">{{tx.amount}}ꜩ</span>
+              </div>
+          </div>
+                    
+          </div>
+          <div role="tabpanel" class="tab-pane" id="send">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">To address</label>
+                      <input type="text" class="form-control" ng-model="toaddress" >
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Amount</label>
+                      <input type="number" class="form-control" ng-model="amount" >
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Fee</label>
+                      <input type="number" class="form-control" ng-model="fee" >
+                    </div>
+                </div>
+                    </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="form-group">
+                      <label for="exampleInputEmail1">Parameters</label>
+                      <input type="text" class="form-control" placeholder="(optional)" ng-model="parameters" >
+                    </div>
+                </div>
+             </div>
+            <div class="row">
+                <div class="col-md-3">
+                  <a ng-click="send()" class="btn btn-small btn-success btn-block">Send</a>
+                </div>
+                <div class="col-md-3">
+                  <a ng-click="clear()" class="btn btn-small btn-primary btn-block">Clear</a>
+                </div>
+            </div>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="delegate">
+          <div class="row">
+              <div class="col-md-12" ng-show="account > 0 && delegateType == ''">
+                  <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please ensure the delegate you are entering has been registered to participate in the baking protocol.</strong></p>
+              </div>
+              <div class="col-md-12" ng-show="account > 0 && delegateType != ''">
+                  <p class="alert alert-warning"><i class="leftIcon fas fa-exclamation-circle"></i><strong>TezBox doesn't endorse any of the listed delegation services listed below - please ensure you are doing your own research into each one.</strong></p>
+              </div>
+              <div class="col-md-12" ng-show="account == 0">
+                  <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Delegation from this address is not allowed (lowercase tz addresses) - these are referred to as implicit addresses and the protocol doesn't allow them to delegate to another key. Please create an account (KT address) to use for delegation.</strong></p>
+              </div>
+            </div>
+              
+            <div class="row" ng-show="account > 0">
+              <div class="col-md-4">
+                  <div class="form-group">
+                    <select class="form-control" ng-model="delegateType">
+                      <option value="">Custom</option>
+                      <option value="tz1Tnjaxk6tbAeC2TmMApPh8UsrEVQvhHvx5">CryptoDelegate</option>
+                      <option value="tz1LesY3S4wfe15SNm1W3qJmQzWxLqVjTruH">xtez.io</option>
+                      <option value="tz1TDSmoZXwVevLTEvKCTHWpomG76oC9S2fJ">Tezos.Community</option>
+                      <option value="tz1WCd2jm4uSt4vntk4vSuUWoZQGhLcDuR9q">HappyTezos</option>
+                    </select>
+                  </div>
+              </div>
+              <div class="col-md-4">
+                  <div class="form-group" ng-show="!delegateType" placeholder="Custom Delegate Key">
+                    <input type="text" class="form-control" ng-model="dd" >
+                  </div>
+              </div>
+              <div class="col-md-3" >
+                <a ng-click="updateDelegate()" class="btn btn-small btn-success btn-block">Update Delegate</a>
+              </div>
+            </div>
+          </div>
+          <div role="tabpanel" class="tab-pane" id="settings">
+            <div class="row">
+              <div class="col-md-12">
+                <h3>Title</h3>
+              </div>
+            </div>
+              
+            <div class="row">
+              <div class="col-md-4">
+                  <div class="form-group">
+                    <input type="text" class="form-control" ng-model="tt" >
+                  </div>
+              </div>
+              <div class="col-md-3" >
+                <a ng-click="saveTitle()" class="btn btn-small btn-success btn-block">Update Title</a>
+              </div>
+            </div>
+            
+            <div ng-hide="account > 0">
+            <div class="row">
+              <div class="col-md-12">
+                <h3>Import KT1 account</h3>
+                <p>You can use this to import KT1 addresses that have been originated else where (or after you have restored your account). You can view all of your originated KT1 addresses on <a target="_blank" href="https://tzscan.io/{{accounts[account].address}}?default=origination">tzscan.io</a>
+              </div>
+            </div>
+              
+            <div class="row">
+              <div class="col-md-4">
+                  <div class="form-group">
+                    <input type="text" class="form-control" ng-model="kt1" placeholder="KT1...">
+                  </div>
+              </div>
+              <div class="col-md-3" >
+                <a ng-click="import()" class="btn btn-small btn-success btn-block">Import</a>
+              </div>
+            </div>
+            </div>
+            
+
+            <div class="row" ng-show="account > 0">
+              <div class="col-md-12">
+                <h3>Remove Account</h3>
+              </div>
+            </div>
+              
+            <div class="row" ng-show="account > 0">
+              <div class="col-md-3">
+                <a ng-click="remove()" class="btn btn-small btn-success btn-block">Remove Account</a>
+              </div>
+            </div>
+          </div>
+            
+          </div>
         </div>
-        <div class="col-xs-3" style="padding:2px;">
-          <a ng-click="qr()" class="btn btn-success btn-small btn-block">Receive</a>
-        </div>
-    </div>
-    <div class="row text-center" style="margin-top:10px;">
-        <div class="col-xs-12 text-center">
-        <h1 class="walletTitle"><i class="fas fa-exchange-alt"></i> Transactions
-        </h1>
-        <strong ng-hide="transactions.length >0">No transactions available</strong>
-        </div>
-    </div>
-    <div class="transactions" ng-hide="transactions.length == 0">
-      <div class='tx' ng-repeat="tx in transactions track by $index">
-            <blocky class="avatar" seed='{{tx.to}}' size='8' scale='16'></blocky>
-            <h3 class="date">{{tx.date}}</h3>
-            <span class="opHash"><a href="{{'http://tzscan.io/' + tx.hash}}" ng-click="openTransaction(tx.hash)">{{tx.hash.slice(0,11)}}..</a></span>
-            <span class="amt">{{tx.amount.toFixed(2)}}ꜩ</span>
+
       </div>
-  </div>
-  </div>
+      <div class="donate text-center">
+      <h5 class="address">
+        Enjoy the wallet? Feel free to donate: <strong>tz1cLDXASgh48ntYmLqM3cqPEXmUtpJVVPma</strong>
+        </button>
+      </h5>
+      </div>
+    </div>
+    </div>
+      
+
+      </div>
+    </div>
 </div>
-<style>.blockatar canvas{width:80px;border-radius: 50%;}</style>
