--- a/src/app/views/new.html
+++ b/src/app/views/new.html
@@ -1,21 +1,22 @@
-<div class="text-center">
+<div class="text-center" style="padding-top:30px;">
     
-    <div class="row">
-      <div class="col-xs-10 col-xs-offset-1">
-        <img class="logoBig" src="skin/images/logo.png" />
-        <h2 class="header">TezBox</h2>
-        <h3 class="header">Secure Tezos Wallet</h3>
-        <br />
-        <br />
-      </div>
-    </div>
-      <div class="row" ng-show="setting.disclaimer">
-        <div class="col-xs-10 col-xs-offset-1">
-          <a ng-click="create()" class="btn btn-success btn-block">Create TezBox</a>
+    <div class="small-container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <img class="logoBig" src="skin/images/logo.png" />
+          <h2 class="header">TezBox</h2>
+          <h3 class="header">Secure Tezos Wallet</h3>
           <br />
-          <a ng-click="restore()" class="btn btn-primary btn-block">Restore TezBox</a>
+          <br />
         </div>
-    </div>
+      </div>
+      <div class="row" ng-show="setting.disclaimer">
+          <div class="col-md-6 col-md-offset-3">
+            <a ng-click="create()" class="btn btn-success btn-block">Create TezBox</a>
+          <br />
+            <a ng-click="restore()" class="btn btn-primary btn-block">Restore TezBox</a>
+          </div>
+      </div>
       <div class="row" ng-hide="setting.disclaimer">
           <div class="col-md-10 col-md-offset-1">
             <p class="alert alert-warning"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Be warned that you are dealing with the live <a href="https://tezosfoundation.ch/news/tezos-betanet-expectations/" target="_blank">Tezos Betanet</a>. Please read and accept our <a href="https://tezbox.github.io/disclaimer.html" target="_blank">Disclaimer</a> before proceeding.</strong></p>
@@ -24,4 +25,5 @@
             <a ng-click="acceptDisclaimer()" class="btn btn-success btn-block">I Accept</a>
           </div>
       </div>
+    </div>
 </div>
