--- a/src/skin/css/popup.css
+++ b/src/skin/css/popup.css
@@ -6,7 +6,6 @@
   left: 0;
   right: 0;
   display:none;
-      z-index: 300;
 }
 #loadingSpinnerContainer .bg{
   background-color:#000;
@@ -23,7 +22,7 @@
     top: 50%;
     margin-top: -20px;
     position: absolute;
-    z-index: 200 !important;
+    z-index: 19 !important;
     animation: loading-bar-spinner 400ms linear infinite;
 }
 
@@ -82,7 +81,7 @@ a.btn-link{
 .alert>i.leftIcon {
   position:absolute;
   left: 20px;
-  top: 20px;
+  top: 15px;
   font-size: 2rem;
 }
 .alert {
@@ -91,21 +90,64 @@ a.btn-link{
     padding-left: 50px;
     text-align:left;
 }
-#area div.mainHeaderBox{
-    text-align: left;
-    margin-top: 0;
-    font-size: .9rem;
-    margin-bottom: 10px;
-    position: fixed;
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+
+#area {
+  background-color: #fff;
+    height: 100%;
+    position: absolute;
     top: 0;
-    background: white;
-    z-index: 100;
+    right: 0;
+    left: 0;
+    bottom: 0;
 }
+#area div.mainHeaderBox{
+  text-align: left;
+  margin:0;
+  font-size:.9rem;
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  height: 70px;
+  background-color: #fff;
+  border-bottom: 2px solid #8F015E;
+  padding: 10px;
+}
+
+#area div.mainBody{
+  position:absolute;
+  top:70px;
+  left:0;
+  right:0;
+  bottom:0;
+  overflow: hidden;
+      min-height: 800px;
+}
+#area div.mainBody>.side{
+  padding: 20px;
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  width: 300px;
+  background-color: #F3F3F3;
+}
+#area div.mainBody>.mainArea>.innerContainer{
+  max-width:1000px;
+}
+#area div.mainBody>.mainArea{
+  padding: 20px;
+  position:absolute;
+  top:0;
+  left:300px;
+  right:0;
+  bottom:0;
+  background-color: #fff;
+  padding-bottom:100px;
+}
+
 #area div.mainHeaderBox img.logoSmall{
-  height: 32px;
+  height: 52px;
   position: relative;
   top: -2px;
 }
@@ -140,18 +182,11 @@ h3.header{
 }
 html {
   background: #ffffff;
-  height: 500px!important;
-  overflow: hidden;
-  overflow-y: scroll;
+  padding: 10px;
   box-sizing: border-box;
-  width: 357px!important;
 }
 body{
 	font-family: 'Arimo', sans-serif!important;
-      overflow: hidden;
-    padding:10px;
-    padding-bottom: 30px;
-    padding-top: 60px;
 }
 .btn{
     text-transform:uppercase;
@@ -162,37 +197,13 @@ body{
     height: 70px;
     border-radius: 100%;
 }
-.poweredby{
-  display:none;
-}
 .walletTitle {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    padding-right: 50px;
-    padding-left: 50px;
-    margin-top: 11px;
-    text-align: center;
+    margin-top: 21px;
     cursor:pointer;
-    font-size: 20px!important;
-}
-.walletTitle .dropdown-menu li a{
-      text-transform: none!important;
-    text-align: left!important;
-}
-.walletTitle .dropdown-menu {
-  right:0!important;
-  left: inherit;
-}
-.walletTitle .dropdown.left {
-  position: absolute;
-  left: 20px;
-  top: 10px;
-}
-.walletTitle .dropdown.right {
-  position: absolute;
-  right: 20px;
-  top: 10px;
+    font-size: 40px!important;
 }
 .icon-button {
     appearance: none;
@@ -213,17 +224,12 @@ h1{
 }
 .addressDetails h5.address{
     line-height:2em!important;
-    font-size:.9em!important;
+    font-size:1em!important;
     color:#aaa;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    width:200px;
-    margin:0 auto;
 }
 .addressDetails h5{
     line-height:2em!important;
-    font-size:2.5rem!important;
+    font-size:3.5rem!important;
     font-weight:bold;
     color:#797979;
     margin: 0;
@@ -232,24 +238,29 @@ h1{
     margin-bottom: 15px;
 }
 .mnemonic{
-    padding: 2px 4px;
-    font-size: 1.5rem;
-    color: #c7254e;
-    background-color: #f9f2f4;
-    border-radius: 4px;
     margin-bottom:15px;
 }
+.mnemonic>span{
+    padding: 5px;
+    font-size: 2rem;
+    color: #c7254e;
+    background-color: #f9f2f4;
+    display:inline-block;
+    border-radius: 4px;
+    margin:5px;
+}
 .logo{
-        font-size: 2em;
+        font-size: 3em;
 }
 .logoSmall {
     position:relative;
     top:-5px;
 }
 .logoBig {
-    max-width: 120px;
+        max-width: 140px;
     display:block;
     margin:0 auto;
+    margin-top:30px;
 }
 .poweredby{
     font-size: .8em!important;
@@ -259,16 +270,155 @@ h1{
         bottom: 5px;
     width: 100%;
 }
-.tabChoices a {
-  font-weight: bold;
-  font-size: 12px;
-  text-transform:uppercase;
-  margin-bottom: 10px;
-  text-align: center;
-  color: #DF385D;
+
+.nav.nav-tabs {
+  margin-top: 30px;
+}
+.nav.nav-tabs a {
   cursor: pointer;
 }
 
+.tab-content{
+  padding-top:20px;
+}
+
+
+.sidebar {
+  padding:0;
+  margin:0;
+  list-style: none;
+}
+.sidebar li {
+  margin:0;
+  border-bottom: 1px solid #B9013B;
+}
+.sidebar li a>i {
+    position: absolute;
+    left: 10px;
+    top: 11px;
+}
+.sidebar li a>svg {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+}
+.sidebar li a {
+    display: block;
+    position: relative;
+    padding: 10px;
+    text-decoration: none;
+    color: #ce6d7c;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.4rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    padding-right: 40px;
+    padding-left: 40px;
+    padding-top: 15px;
+}
+.sidebar:hover li{
+  opacity:.5;
+}
+.sidebar li:hover {
+  opacity:1;
+}
+a {
+    color: #B9013B;
+    text-decoration: none;
+}
+.nav-tabs>li>a>i{
+  margin-right: 10px;
+}
+.nav-tabs>li>a:hover{
+  color: #8F015E;
+}
+.nav-tabs>li>a{
+  font-weight: bold;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  padding: 10px 40px;
+}
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
+    color: #fff;
+    background-color: #8F015E;
+    border: 1px solid #B9013B;
+    border-bottom-color: transparent;
+    cursor: default;
+}
+h3{
+  font-weight: bold; text-transform: uppercase;font-size:1.9rem;
+}
+.tabChoices{
+  margin: 10px;
+    margin-top: 0;
+    text-align: center;
+}
+.tabChoices a:hover{
+  text-decoration:none;
+}
+.tabChoices a{
+      font-weight: bold;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    text-align: center;
+    color: #DF385D;
+    cursor: pointer;
+    padding: 10px;
+    display: block;
+}
+.tabChoices .selected{
+      border-bottom: 4px solid #f0f0f0;
+}
+#settings h3 {
+  font-size: 14px;
+}
+.blocky-container canvas{
+  width: 180px;
+  border-radius: 100%;
+}
+.sidebar canvas {
+    width: 32px;
+    border-radius: 100%;
+    top: 6px;
+    position: absolute;
+    left: 0;
+    margin-right: 10px;
+}
+.med-container {
+  width: 900px!important;
+  margin-top:100px!important;
+    height: 600px!important;
+  
+}
+.small-container, .med-container {
+  width: 500px;
+  margin: 0 auto;
+  box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
+    border-radius: 2px;
+    height: 500px;
+    background-color: #fff;
+    margin-top:50px;
+  
+}
+#area{background-color: #f4f4f4;}
+.med-container .alert {
+  margin-right: 20px;
+  margin-left: 20px
+}
+.med-container .alert>i.leftIcon{
+  top: 15px;
+}
+.accountOffline{
+position: absolute;
+  top: 5px;
+  left: 160px;
+  font-size: 35px;
+  color: #C53929;
+}
 .transactions {
   
 }
@@ -303,32 +453,40 @@ h1{
     color:#B9013B;
      top: 10px;
 }
-.accountOffline{
-position: absolute;
-    top: 5px;
-    right: -20px;
-    font-size: 23px;
-    color: #C53929;
+.sidebar li>a>span{
+  position: absolute;
+    top: 4px;
+    left: 40px;
+    font-size: 10px;
+    width: 120px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #777;
 }
-.tabChoices{
-  margin: 10px;
-    margin-top: 0;
-    text-align: center;
+.sideContainer{
+  overflow: hidden;
+    position: absolute;
+    top: 70px;
+    left: 0px;
+    right: 0px;
+    padding: 0 20px;
+    bottom: 170px;
+    overflow-y: scroll;
 }
-.tabChoices a:hover{
-  text-decoration:none;
-}
-.tabChoices a{
-      font-weight: bold;
-    font-size: 12px;
+.med-title{
+      text-align: center;
+    padding: 30px;
     text-transform: uppercase;
-    margin-bottom: 10px;
-    text-align: center;
-    color: #DF385D;
-    cursor: pointer;
-    padding: 10px;
-    display: block;
+    font-weight: bold;
 }
-.tabChoices .selected{
-      background: #f0f0f0;
+.donate{
+    position: absolute;
+    width: 100%;
+    bottom: 30px;
+    max-width:1000px;
+}
+.mainTabs .tab-pane#transactions{
+   overflow-y: scroll;
+    height: 300px; 
+   
 }
