--- a/src/skin/css/tezbox.css
+++ b/src/skin/css/tezbox.css
@@ -1,3 +1,91 @@
+.accessList{
+	border: 1px solid #ccc;
+	height: 100px;
+	overflow-y: scroll;
+	padding: 5px;
+	margin-bottom: 10px;
+	    border-radius: 4px;
+}
+.accessList ul{
+		padding: 0;
+    list-style-type: none;
+}
+.accessList ul li{
+	padding-left: 20px;
+	position: relative;
+	margin-bottom: 5px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+.accessList ul li>a{
+	position: absolute;
+	left: 4px;
+	font-size: 20px;
+	top: -3px;
+}
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
 #loadingSpinnerContainer{
   display: block;
   position: absolute;
