remove last tzscan reference

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -366,7 +366,7 @@
                     <div class="col-md-12">
                       <div class="form-group">
                         <label>{{translate('import_kt1_account')}}</label>
-                        <p>{{translate('import_kt1_account_msg')}} <a target="_blank" href="https://tzstats.com/{{accounts[account].address}}?default=origination">tzscan.io</a>
+                        <p>{{translate('import_kt1_account_msg')}} <a target="_blank" href="https://tzstats.com/{{accounts[account].address}}?default=origination">tzstats.com</a>
                       </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
